header complete only hamburger menu is left

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,700i" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700,900" rel="stylesheet">
+
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -16,35 +18,50 @@
 			<!-------------------------------LOGO SECTION--------------------------------->
 			<div class="row">
 				<div class="grid-4">
-					<div class="header__logo margin-top-2">
-						<span class="">Rajat Sharma</span>
+					<div class="header__logo">
+						<span class="text-cursive">callme_rks</span>
 					</div>
 				</div>
 				<!-----------------------------------MENU ITEMS SECTION------------------------->
 				<div class="grid-8">
-					<ul class="ul header__ul margin-top-2">
-						<li class="ul__li"><a class="ul__li-a" href="/index.html">Home</a></li>
+					<ul class="ul header__ul text-cinzel">
 						<li class="ul__li"><a class="ul__li-a" href="/index.html">About</a></li>
 						<li class="ul__li"><a class="ul__li-a" href="/index.html">Work</a></li>
 						<li class="ul__li"><a class="ul__li-a" href="/index.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
-			<div class="headingOnGreen">
-				<span class="headingOnGreen__primary">get to know me</span>
-				<span class="headingOnGreen__sub">Then, Please click here</span>
-				<span><a href="#about">Click Here</span>
+            
+			<!-----------------------BACKGROUND IMAGES INSIDE HEADER------------------------------>
+			<div class="image">
+				<img class="image__number1" src="images/header-image1.png" alt="rajat sharma" />
+				<img class="image__number2" src="images/header-image2.png" alt="rajat sharma" />
+				<img class="image__number3" src="images/header-image2.png" alt="rajat sharma" />
+				<img class="image__number4" src="images/header-image1.png" alt="rajat sharma" />
+				<img class="image__number5" src="images/header-image2.png" alt="rajat sharma" />
+			</div>
+
+			<!---------------------------------HEADER INTRO----------------------------------->
+			<div class="row">
+				<div class="headingOnGreen grid-6">
+					<h1 class="headingOnGreen__primary margin-bottom-sm text-center text-cursive">Are you looking for cool web developer or a designer</h1>
+					<div class="buttons text-center">
+						<span><a class="btn-white__sm" href="#about">Read more</a></span>
+					</div>
+				</div>
 			</div>
 		</header>
 		<!-----------------------------------INTRO SECTION---------------------------------->
 		<section id="about" class="about section-padding">
-			<div class="headingOnWhite text-center margin-bottom-8">
+			<div class="headingOnWhite text-center margin-bottom-lg">
 				<h1 class="headingOnWhite__primary">who i am</h1>
 			</div>
 			<div class="row u-content-padding">
 				<div class="grid-8">
-					<h1 class="">Hello</h1>
-					<p class="">skndjgbjk dknshjkkdbgjds kcnhjkvdb cmbsjkbksv cksbjkvbavakd bcjgufeahiv</p>
+					<h1 class="margin-bottom-sm">Hello</h1>
+					<p class="paragraph">skndjgbjk dknshjkkdbgjds kcnhjkvdb cmbsjkbksv cksbjkvbavakd bcjgufeahiv</p>
+					<h1 class="margin-bottom-sm">Hello</h1>
+					<p class="paragraph">skndjgbjk dknshjkkdbgjds kcnhjkvdb cmbsjkbksv cksbjkvbavakd bcjgufeahiv</p>
 				</div>
 				<div class="grid-4">
 					<h1 class="">Hello</h1>
