changed images and fully responsive site is ready but final version and finishing is not done yet

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<li class="navigation__item"><a class="navigation__link" href="#experience">Experience</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#projects">Work</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#contact">Contact</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#follow-me">Folow Me</a></li>
+					<li class="navigation__item"><a class="navigation__link" href="#follow-me">Follow Me</a></li>
 				</ul>
 			</nav>
 			
@@ -42,9 +42,9 @@
 			</div>
 			
 			<!-----------------------BACKGROUND IMAGES INSIDE HEADER------------------------------>
-			<img class="header__image header__image--number1" src="images/header-image1.png" alt="rajat sharma" />
-			<img class="header__image header__image--number2" src="images/header-image2.png" alt="rajat sharma" />
-			<img class="header__image header__image--number3" src="images/header-image1.png" alt="rajat sharma" />
+			<img class="header__image header__image--number1" src="images/image-7.png" alt="rajat sharma" />
+			<img class="header__image header__image--number2" src="images/image-4.png" alt="rajat sharma" />
+			<img class="header__image header__image--number3" src="images/image-3.png" alt="rajat sharma" />
 			<!---------------------------------HEADER INTRO----------------------------------->
 			<div class="header__heading text-center">
 				<p class="header__heading__primary margin-bottom-m text-center">Are you looking for cool web developer or a designer?</p>
@@ -78,9 +78,9 @@
 				</div>
 				<div class="grid-6 about__composition">
 					<div class="composition">
-						<img class="composition__image composition__image--number1" src="images/header-image1.png" alt="rajat sharma" />
-						<img class="composition__image composition__image--number2" src="images/header-image2.png" alt="rajat sharma" />
-						<img class="composition__image composition__image--number3" src="images/header-image1.png" alt="rajat sharma" />
+						<img class="composition__image composition__image--number1" src="images/about-2.png" alt="rajat sharma" />
+						<img class="composition__image composition__image--number2" src="images/about-1.png" alt="rajat sharma" />
+						<img class="composition__image composition__image--number3" src="images/about-3.png" alt="rajat sharma" />
 					</div>
 				</div>
 			</div>
@@ -130,7 +130,7 @@
 									<li>Drupal/WordPress</li>
 									<li>HTML</li>
 									<li>React/Vue</li>
-									<li>M-first/D-first</li>
+									<li>GitHub</li>
 								</ul>
 							</div>
 						</div>
@@ -152,7 +152,7 @@
 									<li>SQL</li>
 									<li>Firebase</li>
 									<li>Redux</li>
-									<li>Servers</li>
+									<li>Terminals</li>
 									<li>MongoDB</li>
 								</ul>
 							</div>
@@ -167,45 +167,54 @@
 		<!------(5)-----------------------------PROJECTS---------------------------------->
 		<section id="projects" class="projects section-padding panel">
 			<div class="text-center margin-bottom-lg">
-				<h1 class="heading__onDark--main margin-bottom-sm">Projects</h1>
+				<h1 class="heading__onDark--main margin-bottom-sm">Latest Works</h1>
 				<p class="heading__onDark--secondary">Hover/tap on Image to see Project Description</p>
 			</div>
 			<div class="row">
 				<div class="grid-12 margin-bottom-lg">
 					<div class="projects-wrap">
 						<figure class="projects-wrap__fig">
-							<img src="images/shopping-cart.png">
-							<figcaption class="projects-wrap__caption">image</figcaption>
+							<img src="images/project-1.png">
+							<figcaption class="projects-wrap__caption">
+								<h3>On Github</h3>
+								<span><a class="btn btn__green--sm" href="#website-intro">See Here</a></span>
+							</figcaption>
 						</figure>
 					</div>
 					<div class="projects-wrap">
 						<figure class="projects-wrap__fig">
-							<img src="images/portfolio.png">
-							<figcaption class="projects-wrap__caption">image</figcaption>
+							<img src="images/project-2.png">
+							<figcaption class="projects-wrap__caption">
+								<h3>On Github</h3>
+								<span><a class="btn btn__green--sm" href="#website-intro">See Here</a></span>
+							</figcaption>
 						</figure>
 					</div>
 					<div class="projects-wrap">
 						<figure class="projects-wrap__fig">
-							<img src="images/krazyfood.png">
-							<figcaption class="projects-wrap__caption">image</figcaption>
+							<img src="images/project-3.png">
+							<figcaption class="projects-wrap__caption">
+								<h3>Direct Link</h3>
+								<span><a class="btn btn__green--sm" href="#website-intro">See Here</a></span>
+							</figcaption>
 						</figure>
 					</div>
 					<div class="projects-wrap">
 						<figure class="projects-wrap__fig">
-							<img src="images/decreto.png">
-							<figcaption class="projects-wrap__caption">image</figcaption>
+							<img src="images/project-4.png">
+							<figcaption class="projects-wrap__caption">
+								<h3>Banners</h3>
+								<span>Not Available On Github</span>
+							</figcaption>
 						</figure>
 					</div>
 					<div class="projects-wrap">
 						<figure class="projects-wrap__fig">
-							<img src="images/header-image1.png">
-							<figcaption class="projects-wrap__caption">image</figcaption>
-						</figure>
-					</div>
-					<div class="projects-wrap">
-						<figure class="projects-wrap__fig">
-							<img src="images/header-image1.png">
-							<figcaption class="projects-wrap__caption">image</figcaption>
+							<img src="images/project-5.png">
+							<figcaption class="projects-wrap__caption">
+								<h3>Final Project in Drupal</h3>
+								<span>Not Available On Github</span>
+							</figcaption>
 						</figure>
 					</div>
 				</div>
