only text updated

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 				<h1 class="heading__onWhite--main">Think Future!</h1>
 			</div>
 			<div class="row">
-				<h3 class="paragraph text-center">You are entered into a sassy and massy website </h3>
-				<p class="paragraph">Probably, You gonna love this website but actually for me this is more than website or portfolio. Before you see my work and expriences and all about myself. I would like to leave you a short note here. This website has some really advanced features, which might can not able to support some browsers. The idea of building this portfolio was to present my skills on the behalf of latest tools and technologies.</p>
+				<h3 class="paragraph text-center">You are entered into a sassy and classy website </h3>
+				<p class="paragraph">Probably, You gonna love this website but actually for me this is more than website or portfolio. Before you see my work and expriences and all about myself. I would like to leave you a short note here. This website has some really advanced features, which might can not able to support some browsers. The idea of building this portfolio was to present my skills on the behalf of latest tools and technologies. Although, my portfolio is not 100% ready yet. I am continuously updating this for getting better Interface Design.</p>
 				<span class="text-center text-cinzel"><a href="#about" class="btn__dark--sm" >Begin Here &rarr;</a></span>
 			</div>
 			
