--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							<img src="images/project-1.png">
 							<figcaption class="projects-wrap__caption">
 								<h3>On Github</h3>
-								<span><a class="btn btn__green--sm" href="#website-intro">See Here</a></span>
+								<span><a class="btn btn__green--sm" href="https://github.com/callmerks/callmerks.github.io">See Here</a></span>
 							</figcaption>
 						</figure>
 					</div>
@@ -186,7 +186,7 @@
 							<img src="images/project-2.png">
 							<figcaption class="projects-wrap__caption">
 								<h3>On Github</h3>
-								<span><a class="btn btn__green--sm" href="#website-intro">See Here</a></span>
+								<span><a class="btn btn__green--sm" href="https://github.com/callmerks/Pure-Javascript-Shopping-List">See Here</a></span>
 							</figcaption>
 						</figure>
 					</div>
@@ -195,7 +195,7 @@
 							<img src="images/project-3.png">
 							<figcaption class="projects-wrap__caption">
 								<h3>Direct Link</h3>
-								<span><a class="btn btn__green--sm" href="#website-intro">See Here</a></span>
+								<span><a class="btn btn__green--sm" href="http://drupal8.decreto.bellcom.dk/user/login">See Here</a></span>
 							</figcaption>
 						</figure>
 					</div>
@@ -247,12 +247,11 @@
 		<div class="footer__navigation">
 		<nav>
 			<ul class="ul margin-top-sm margin-bottom-sm">
-				<li class="footer__li"><a class="footer__links" href=""><i class="fa fa-facebook"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href=""><i class="fa fa-instagram"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href=""><i class="fa fa-dribbble"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href=""><i class="fa fa-github"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href=""><i class="fa fa-whatsapp"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href=""><i class="fa fa-google"></i></a></li>
+				<li class="footer__li"><a class="footer__links" href="https://www.facebook.com/rajatsharma123"><i class="fa fa-facebook"></i></a></li>
+				<li class="footer__li"><a class="footer__links" href="https://www.instagram.com/r_k_s93/"><i class="fa fa-instagram"></i></a></li>
+				<li class="footer__li"><a class="footer__links" href="https://dribbble.com/callmerks"><i class="fa fa-dribbble"></i></a></li>
+				<li class="footer__li"><a class="footer__links" href="https://github.com/callmerks"><i class="fa fa-github"></i></a></li>
+				<li class="footer__li"><a class="footer__links" href="https://web.whatsapp.com/"><i class="fa fa-whatsapp"></i></a></li>
 			</ul>
 		</nav>
 	</div>
