--- a/index.html
+++ b/index.html
@@ -41,56 +41,38 @@
 				<span class="text-cursive"><a class="logo-link" href="">RajatSharma</a></span>
 			</div>
 			
-			<!-----------------------BACKGROUND IMAGES INSIDE HEADER------------------------------>
-			<img class="header__image header__image--number1" src="images/image-7.png" alt="rajat sharma" />
-			<img class="header__image header__image--number2" src="images/image-4.png" alt="rajat sharma" />
-			<img class="header__image header__image--number3" src="images/image-3.png" alt="rajat sharma" />
-			<!---------------------------------HEADER INTRO----------------------------------->
+					<!---------------------------------HEADER INTRO----------------------------------->
 			<div class="header__heading text-center">
 				<p class="header__heading__primary margin-bottom-m text-center">Are you looking for cool web developer or a designer?</p>
 				<span><a class="btn btn__green--sm" href="#website-intro">Read more</a></span>
 			</div>
 		</header>
 		<!------(2)-----------------------------WEBSITE INTRO---------------------------------->
-		<section id="website-intro" class="website-intro section-padding panel">
+		<section id="website-intro" class="intro section-padding panel">
+			<div>
 			<div class="text-center margin-bottom-sm">
-				<h1 class="heading__onWhite--main">Think Future!</h1>
+				<h1 class="heading__onMainBg--main text-cinzel">Web Developer & Designer</h1>
 			</div>
 			<div class="row">
-				<h3 class="paragraph text-center">You are entered into a sassy and classy website </h3>
-				<p class="paragraph">Probably, You gonna love this website but actually for me this is more than website or portfolio. Before you see my work and expriences and all about myself. I would like to leave you a short note here. This website has some really advanced features, which might can not able to support some browsers. The idea of building this portfolio was to present my skills on the behalf of latest tools and technologies. Although, my portfolio is not 100% ready yet. I am continuously updating this for getting better Interface Design.</p>
-				<span class="text-center text-cinzel"><a href="#about" class="btn__dark--sm" >Begin Here &rarr;</a></span>
+				<div class="grid-6 intro__section-1">
+					<h2 class="text-center margin-bottom-sm">Intro</h2>
+				<p class="paragraph margin-bottom-sm">Hey, My full name is Rajat Kumar Sharma and I bring more than 2 years of experience in Web Design and Development. The idea behind making this portfolio is to present my good intermediate skills on behalf of latest properties and techniques supported by modern browsers. Although, I am keeping my portfolio up-to-date in routine and always try to make more exciting.</p>
 			</div>
+			<div class="grid-6">
+				<h2 class="text-center margin-bottom-sm">About</h2>
+				<p class="paragraph margin-bottom-sm">My dream is to become a full stack developer or senior developer some day but to reach there, I am making it sure that, I should know all those important skills, which will benefit me near future. I put equally importance of design and functionality of websites because I think, without crisp frontend techniques, UX and UI, website does not have any meaning and it goes to the other way around as well</p>
+			</div>
+			</div>
+			<span class="text-center text-cinzel"><a href="#about" class="btn__mainBtn--sm text-center" >Begin Here &rarr;</a></span>
+		</div>
 			
 		</section>
-		<!------(3)-----------------------------INTRO SECTION---------------------------------->
-		<section id="about" class="about section-padding panel">
-			<div class="margin-bottom-sm text-center">
-				<h1 class="heading__onDark--main">Web Developer & Designer</h1>
-			</div>
-			<div class="row ">
-				<h1 class="margin-bottom-sm text-cinzel">Intro</h1>
-				<div class="grid-6 margin-bottom-lg">
-					<p class="paragraph">Hello, My name is Rajat Kumar Sharma. For short, Just call me RKS or RJ. I bring more than 2 years of experience in Web Development industry. I love my Job and I am passionate about to become a Full-Stack Developer or Software Engineer. Well, It is not far away because, I have a high level of Front-End knowledge and I am on my way to become a Full Stack Developer soon. </p>
-					<p class="paragraph">I am always aware of the web development industry or web standards and the top most technologies. I am proud to be a part of this community.</p>
-					<span class="text-cinzel"><a href="#experience" class="btn__white--sm" >Learn More &rarr;</a></span>
-					
-				</div>
-				<div class="grid-6 about__composition">
-					<div class="composition">
-						<img class="composition__image composition__image--number1" src="images/about-2.png" alt="rajat sharma" />
-						<img class="composition__image composition__image--number2" src="images/about-1.png" alt="rajat sharma" />
-						<img class="composition__image composition__image--number3" src="images/about-3.png" alt="rajat sharma" />
-					</div>
-				</div>
-			</div>
-			
-		</section>
+		
 		<!------(4)-----------------------------Experiences---------------------------------->
 		<section id="experience" class="experience section-padding panel">
 			<div class="text-center margin-bottom-lg">
-				<h1 class="heading__onWhite--main margin-bottom-sm">Experience</h1>
-				<p class="heaidng__onWhite--secondary">Hover/hold cards for additional Informations</p>
+				<h1 class="heading__onMainBg--main margin-bottom-sm text-cinzel">Experience</h1>
+				<p class="heaidng__onMainBg--secondary">Hover/hold cards for additional Informations</p>
 			</div>
 			<div class="row ">
 				<!------ section-1-experience---->
@@ -167,8 +149,8 @@
 		<!------(5)-----------------------------PROJECTS---------------------------------->
 		<section id="projects" class="projects section-padding panel">
 			<div class="text-center margin-bottom-lg">
-				<h1 class="heading__onDark--main margin-bottom-sm">Latest Works</h1>
-				<p class="heading__onDark--secondary">Hover/tap on Image to see Project Description</p>
+				<h1 class="heading__onDarkBg--main margin-bottom-sm text-cinzel">Latest Works</h1>
+				<p class="heading__onDarkBg--secondary">Hover/tap on Image to see Project Description</p>
 			</div>
 			<div class="row">
 				<div class="grid-12 margin-bottom-lg">
@@ -219,14 +201,14 @@
 					</div>
 				</div>
 				<p class="text-center margin-bottom-sm">You can have a look on Github</p>
-				<span class="text-cinzel"><a href="https://github.com/callmerks" class="btn__white--sm"> Click Here</a></span>
+				<span class="text-cinzel"><a href="https://github.com/callmerks" class="btn__mainBtn--sm"> Click Here</a></span>
 			</div>
 		</section>
 		<!------(6)-----------------------------CONTACT---------------------------------->
 		<section id="contact" class="contact section-padding panel">
 			<div class="text-center">
-				<h3 class="heading__onWhite--secondary  margin-bottom-lg margin-top-lg text-cinzel">Did you make your mind to collabrate with me?</h3>
-				<p class="heading__onWhite--secondary margin-bottom-lg">I am simply open to discussing any kind of Projects or Ideas. So, let's do this</p>
+				<h3 class="margin-bottom-lg margin-top-lg text-cinzel">Did you make your mind to collabrate with me?</h3>
+				<p class="heading__onDarkBg--secondary margin-bottom-lg">I am simply open to discussing any kind of Projects or Ideas. So, let's do this</p>
 			</div>
 			<!-- Begin MailChimp Signup Form -->
 			<div id="mc_embed_signup">
