--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 					<li class="navigation__item"><a class="navigation__link" href="#experience">Experience</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#projects">Work</a></li>
 					<li class="navigation__item"><a class="navigation__link" href="#contact">Contact</a></li>
-					<li class="navigation__item"><a class="navigation__link" href="#follow-me">Follow Me</a></li>
 				</ul>
 			</nav>
 			
@@ -41,7 +40,7 @@
 				<span class="text-cursive"><a class="logo-link" href="">RajatSharma</a></span>
 			</div>
 			
-					<!---------------------------------HEADER INTRO----------------------------------->
+			<!---------------------------------HEADER INTRO----------------------------------->
 			<div class="header__heading text-center">
 				<p class="header__heading__primary margin-bottom-m text-center">Are you looking for cool web developer or a designer?</p>
 				<span><a class="btn btn__green--sm" href="#website-intro">Read more</a></span>
@@ -50,21 +49,34 @@
 		<!------(2)-----------------------------WEBSITE INTRO---------------------------------->
 		<section id="website-intro" class="intro section-padding panel">
 			<div>
-			<div class="text-center margin-bottom-sm">
-				<h1 class="heading__onMainBg--main text-cinzel">Web Developer & Designer</h1>
+				<div class="text-center margin-bottom-sm">
+					<h1 class="heading__onMainBg--main text-cinzel">Web Developer & Designer</h1>
+				</div>
+				<div class="row">
+					<div class="grid-6 intro__section-1">
+						<h2 class="text-center margin-bottom-sm">Who Am I</h2>
+						<p class="paragraph margin-bottom-sm">Hey, i'm Rajat Sharma. I was born and raised in India but in 2016, I decided to pursue my education in Denmark in a Web/software development career. I have completed my bachelor's in march, 2018 and I am proud to be a part of web development community. I am passionate developer and the idea behind making my portfolio is to present my intermediate skills on behalf of latest properties and techniques supported by modern browsers.</p>
+					</div>
+					<div class="grid-6">
+						<h2 class="text-center margin-bottom-sm">Intro</h2>
+						<p class="paragraph margin-bottom-sm">I am very passionate in learning new technologies. I dream to become a full stack developer but I really believe, in order to built an entire house, we must need a strong foundation. So, this is the reason, I want to start my career as a junior developer. By working as a juniour developer, I'll have great opportunity to learn all those essentials things and strategies, which will benefit me near future.</p>
+					</div>
+				</div>
+				<span class="text-center text-cinzel"><a href="#about" class="btn__mainBtn--sm text-center" >Read More &rarr;</a></span>
 			</div>
-			<div class="row">
-				<div class="grid-6 intro__section-1">
-					<h2 class="text-center margin-bottom-sm">Intro</h2>
-				<p class="paragraph margin-bottom-sm">Hey, My full name is Rajat Kumar Sharma and I bring more than 2 years of experience in Web Design and Development. The idea behind making this portfolio is to present my good intermediate skills on behalf of latest properties and techniques supported by modern browsers. Although, I am keeping my portfolio up-to-date in routine and always try to make more exciting.</p>
-			</div>
-			<div class="grid-6">
-				<h2 class="text-center margin-bottom-sm">About</h2>
-				<p class="paragraph margin-bottom-sm">My dream is to become a full stack developer or senior developer some day but to reach there, I am making it sure that, I should know all those important skills, which will benefit me near future. I put equally importance of design and functionality of websites because I think, without crisp frontend techniques, UX and UI, website does not have any meaning and it goes to the other way around as well</p>
-			</div>
-			</div>
-			<span class="text-center text-cinzel"><a href="#about" class="btn__mainBtn--sm text-center" >Begin Here &rarr;</a></span>
-		</div>
+			
+		</section>
+		<!------(3)-----------------------------About---------------------------------->
+		<section id="about" class="about section-padding panel">
+			<div>
+				<div class="text-center margin-bottom-sm">
+					<h1 class="heading__onMainBg--main text-cinzel">About</h1>
+				</div>
+				<div class="row">
+					<div class="grid-12">
+						<p class="paragraph about__section">I bring more than 2 years of experience as a web developer and I am highly proficient in creating great sketches, UX, UI and responsive design for websites. I am familiar with most of the latest technologies and frameworks. Especially, I have a huge love for javascript and my next target is to become a professional in one of the famous programming language. I put equally importance of design and functionality of websites because I think, without crisp frontend design, any website is just an ugly entire house and it goes to the other way around as well.</p>
+					</div>
+				</div>
 			
 		</section>
 		
@@ -80,18 +92,18 @@
 					<div class="cards">
 						<div class="cards__side cards__side--front">
 							<i class="icon-basic-pencil-ruler-pen experience__icons"></i>
-							<div class="experience__content-box">
-								<h3 class="margin-bottom-sm margin-top-sm">Design</h3>
-								<ul class="ul">
-									<li>UX</li>
-									<li>UI</li>
-									<li>Mobile Apps</li>
-									<li>Logos</li>
-									<li>Sketches</li>
-									<li>Photoshop</li>
-									<li>Illustrator</li>
-								</ul>
+							<div class="experience__heading-design margin-bottom-sm text-center">
+								<span class="experience__heading-span text-cursive">Design</span>
 							</div>
+							<ul class="experience__content text-center ul">
+								<li>UX</li>
+								<li>UI</li>
+								<li>Mobile Apps</li>
+								<li>Logos</li>
+								<li>Sketches</li>
+								<li>Photoshop</li>
+								<li>Illustrator</li>
+							</ul>
 						</div>
 						<div class="cards__side cards__side--back">
 							<p class="experience__content-box-back text-cinzel">I simply put all the important discussions and mature planning before I start the work and implement the coding </p>
@@ -103,18 +115,18 @@
 					<div class="cards">
 						<div class="cards__side cards__side--front">
 							<i class="icon-basic-webpage-multiple experience__icons"></i>
-							<div class="experience__content-box">
-								<h3 class="margin-bottom-sm margin-top-sm">Front Developer</h3>
-								<ul class="ul">
-									<li>SASS</li>
-									<li>JavaScript/ES-2015</li>
-									<li>jQuery</li>
-									<li>Drupal/WordPress</li>
-									<li>HTML</li>
-									<li>React/Vue</li>
-									<li>GitHub</li>
-								</ul>
+							<div class="experience__heading-frontend margin-bottom-sm text-center">
+								<span class="experience__heading-span text-cursive">Frontend</span>
 							</div>
+							<ul class="experience__content text-center ul">
+								<li>SASS</li>
+								<li>JavaScript/ES-2015</li>
+								<li>jQuery</li>
+								<li>Drupal/WordPress</li>
+								<li>HTML</li>
+								<li>React/Vue</li>
+								<li>GitHub</li>
+							</ul>
 						</div>
 						<div class="cards__side cards__side--back">
 							<p class="experience__content-box-back text-cinzel">I tend to write neat & clean code and always try to bring all imaginations into realities on my projects</p>
@@ -126,21 +138,21 @@
 					<div class="cards">
 						<div class="cards__side cards__side--front">
 							<i class="icon-basic-server2 experience__icons"></i>
-							<div class="experience__content-box">
-								<h3 class="margin-bottom-sm margin-top-sm">Backend Developer</h3>
-								<ul class="ul">
-									<li>Node</li>
-									<li>Express</li>
-									<li>SQL</li>
-									<li>Firebase</li>
-									<li>Redux</li>
-									<li>Terminals</li>
-									<li>MongoDB</li>
-								</ul>
+							<div class="experience__heading-backend margin-bottom-sm text-center">
+								<span class="experience__heading-span text-cursive">Backend</span>
 							</div>
+							<ul class="experience__content text-center ul">
+								<li>Node</li>
+								<li>Express</li>
+								<li>SQL</li>
+								<li>Firebase</li>
+								<li>Redux</li>
+								<li>Terminals</li>
+								<li>MongoDB</li>
+							</ul>
 						</div>
 						<div class="cards__side cards__side--back">
-							<p class="experience__content-box-back text-cinzel">I genuinely care about the logics before use something. For example - when to use technologies like mongodb or node and express etc.  </p>
+							<p class="experience__content-box-back text-cinzel">I genuinely care about the logics before implement something. As a backend developer, I again love to start from scratch, make ER diagrams, build plans and implement them. </p>
 						</div>
 					</div>
 				</div>
@@ -148,9 +160,8 @@
 		</section>
 		<!------(5)-----------------------------PROJECTS---------------------------------->
 		<section id="projects" class="projects section-padding panel">
-			<div class="text-center margin-bottom-lg">
-				<h1 class="heading__onDarkBg--main margin-bottom-sm text-cinzel">Latest Works</h1>
-				<p class="heading__onDarkBg--secondary">Hover/tap on Image to see Project Description</p>
+			<div class="text-center margin-bottom-sm">
+				<h1 class="heading__onDarkBg--main text-cinzel">Latest Works</h1>
 			</div>
 			<div class="row">
 				<div class="grid-12 margin-bottom-lg">
@@ -158,8 +169,9 @@
 						<figure class="projects-wrap__fig">
 							<img src="images/project-1.png">
 							<figcaption class="projects-wrap__caption">
-								<h3>On Github</h3>
-								<span><a class="btn btn__green--sm" href="https://github.com/callmerks/callmerks.github.io">See Here</a></span>
+							<div class="projects-wrap__description">
+								<span><a class="btn btn__green--sm" href="https://github.com/callmerks/callmerks.github.io">On Github</a></span>
+							</div>
 							</figcaption>
 						</figure>
 					</div>
@@ -167,8 +179,9 @@
 						<figure class="projects-wrap__fig">
 							<img src="images/project-2.png">
 							<figcaption class="projects-wrap__caption">
-								<h3>On Github</h3>
-								<span><a class="btn btn__green--sm" href="https://github.com/callmerks/Pure-Javascript-Shopping-List">See Here</a></span>
+							<div class="projects-wrap__description">
+								<span><a class="btn btn__green--sm" href="https://github.com/callmerks/Pure-Javascript-Shopping-List">On Github</a></span>
+							</div>
 							</figcaption>
 						</figure>
 					</div>
@@ -176,8 +189,9 @@
 						<figure class="projects-wrap__fig">
 							<img src="images/project-3.png">
 							<figcaption class="projects-wrap__caption">
-								<h3>Direct Link</h3>
-								<span><a class="btn btn__green--sm" href="http://drupal8.decreto.bellcom.dk/user/login">See Here</a></span>
+							<div class="projects-wrap__description">
+								<span><a class="btn btn__green--sm" href="http://drupal8.decreto.bellcom.dk/user/login">Visit Website</a></span>
+							</div>
 							</figcaption>
 						</figure>
 					</div>
@@ -185,8 +199,9 @@
 						<figure class="projects-wrap__fig">
 							<img src="images/project-4.png">
 							<figcaption class="projects-wrap__caption">
-								<h3>Banners</h3>
-								<span>Not Available On Github</span>
+							<div class="projects-wrap__description">
+								<h3>No Link Available</h3>
+							</div>
 							</figcaption>
 						</figure>
 					</div>
@@ -194,8 +209,9 @@
 						<figure class="projects-wrap__fig">
 							<img src="images/project-5.png">
 							<figcaption class="projects-wrap__caption">
-								<h3>Final Project in Drupal</h3>
-								<span>Not Available On Github</span>
+							<div class="projects-wrap__description">
+								<h3>No Link Available</h3>
+							</div>
 							</figcaption>
 						</figure>
 					</div>
@@ -205,45 +221,51 @@
 			</div>
 		</section>
 		<!------(6)-----------------------------CONTACT---------------------------------->
-		<section id="contact" class="contact section-padding panel">
-			<div class="text-center">
-				<h3 class="margin-bottom-lg margin-top-lg text-cinzel">Did you make your mind to collabrate with me?</h3>
-				<p class="heading__onDarkBg--secondary margin-bottom-lg">I am simply open to discussing any kind of Projects or Ideas. So, let's do this</p>
+		<section id="" class="subscribe section-padding panel">
+			<div class="bg-video">
+				<video class="bg-video__content" autoplay muted loop>
+					<source src="../images/contact-video.mp4" type="video/mp4">
+					<source src="../images/contact-video.webm" type="video/webm">
+					Your browser is not supported!
+				</video>
 			</div>
-			<!-- Begin MailChimp Signup Form -->
-			<div id="mc_embed_signup">
-				<form action="https://github.us18.list-manage.com/subscribe/post?u=5adfd8b171f724bc47b470da8&amp;id=8c034ba345" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					<div id="mc_embed_signup_scroll">
-						<div class="clear mc-embed-div"><input type="submit" value="get in touch" name="subscribe" id="mc-embedded-subscribe" class="button text-cinzel margin-bottom-lg"></div>
-					</div>
-				</form>
+			<div class="subscribe__content">
+				<h3 class="subscribe__content-heading margin-bottom-lg padding-top-sm text-center">Did you make your mind to collabrate with me?</h3>
+				<p class="subscribe__content-para margin-bottom-lg text-center">I am simply open to discussing any kind of Projects or Ideas. So, let's do this</p>
+				<!-- Begin MailChimp Signup Form -->
+				<div id="mc_embed_signup">
+					<form action="https://github.us18.list-manage.com/subscribe/post?u=5adfd8b171f724bc47b470da8&amp;id=8c034ba345" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+							<div class="clear mc-embed-div"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button text-cinzel margin-bottom-lg"></div>
+						</div>
+					</form>
+				</div>
+				<!--End mc_embed_signup-->
 			</div>
-			<!--End mc_embed_signup-->
-		</div>
-	</section>
-	<!---------------FOOTER SECTION SEPERATE FROM WRAPPER---------->
-	<footer id="follow-me" class="footer section-padding panel">
-		<div class="footer__logo">
-			<span class="text-cursive"><a class="logo-link footer__logo--link" href="">RajatSharma</a></span>
-		</div>
-		<div class="footer__navigation">
-		<nav>
-			<ul class="ul margin-top-sm margin-bottom-sm">
-				<li class="footer__li"><a class="footer__links" href="https://www.facebook.com/rajatsharma123"><i class="fa fa-facebook"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href="https://www.instagram.com/r_k_s93/"><i class="fa fa-instagram"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href="https://dribbble.com/callmerks"><i class="fa fa-dribbble"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href="https://github.com/callmerks"><i class="fa fa-github"></i></a></li>
-				<li class="footer__li"><a class="footer__links" href="https://web.whatsapp.com/"><i class="fa fa-whatsapp"></i></a></li>
-			</ul>
-		</nav>
-	</div>
-
-	<div class="more">
-		<p class="more__info more__copyrights"><i class="fa fa-copyright"></i> callmerks.github.io</p>
-		<p class="more__info more__contact"><i class="fa fa-phone"></i> 71518402</p>
-		<p class="more__info more__email">kumarindenmark@gmail.com</p>
-	</div>
-	</footer>
-	
-</body>
+		</section>
+		<!---------------FOOTER SECTION SEPERATE FROM WRAPPER---------->
+		<footer id="contact" class="footer section-padding panel">
+			<div class="footer__logo">
+				<span class="text-cursive"><a class="logo-link footer__logo--link" href="">RajatSharma</a></span>
+			</div>
+			<div class="footer__navigation">
+				<nav>
+					<ul class="ul margin-top-sm margin-bottom-sm">
+						<li class="footer__li"><a class="footer__links footer__links-facebook " href="https://www.facebook.com/rajatsharma123"><i class="fa fa-facebook"></i></a></li>
+						<li class="footer__li"><a class="footer__links footer__links-instagram" href="https://www.instagram.com/r_k_s93/"><i class="fa fa-instagram"></i></a></li>
+						<li class="footer__li"><a class="footer__links footer__links-linkedin " href="https://www.linkedin.com/feed/?trk="><i class="fa fa-linkedin"></i></a></li>
+						<li class="footer__li"><a class="footer__links footer__links footer__links-whatsapp" href="https://web.whatsapp.com/"><i class="fa fa-whatsapp"></i></a></li>
+						<li class="footer__li"><a class="footer__links footer__links-dribble" href="https://dribbble.com/callmerks"><i class="fa fa-dribbble"></i></a></li>
+						<li class="footer__li"><a class="footer__links footer__links-github" href="https://github.com/callmerks"><i class="fa fa-github"></i></a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="more">
+				<p class="more__info more__copyrights"><i class="fa fa-copyright"></i> 2018-rajatsharma</p>
+				<p class="more__info more__contact"><i class="fa fa-phone"></i> 71518402</p>
+				<p class="more__info more__email">kumarindenmark@gmail.com</p>
+			</div>
+		</footer>
+		
+	</body>
 </html>
